[package]
name = "rustti_benchmarks"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.6.0"

[dependencies]
centaur_technical_indicators = { path = "../rust_ti" }
#centaur_technical_indicators = "1.0.0"  # Use this once version compatible with 2.x API is published

[[bench]]
name = "rsi"
harness = false

[[bench]]
name = "so"
harness = false

[[bench]]
name = "slow_so"
harness = false

[[bench]]
name = "slowest_so"
harness = false

[[bench]]
name = "williams_r"
harness = false

[[bench]]
name = "mfi"
harness = false

[[bench]]
name = "roc"
harness = false

[[bench]]
name = "obv"
harness = false

[[bench]]
name = "cci"
harness = false

[[bench]]
name = "mg_cci"
harness = false

[[bench]]
name = "macd"
harness = false

[[bench]]
name = "mg_macd"
harness = false

[[bench]]
name = "co"
harness = false

[[bench]]
name = "ppo"
harness = false

[[bench]]
name = "cmo"
harness = false

[[bench]]
name = "cnst_env"
harness = false

[[bench]]
name = "mg_env"
harness = false

[[bench]]
name = "cnst_bands"
harness = false

[[bench]]
name = "mg_bands"
harness = false

[[bench]]
name = "icloud"
harness = false

[[bench]]
name = "donchian_chnl"
harness = false

[[bench]]
name = "keltner_chnl"
harness = false

[[bench]]
name = "supertrend"
harness = false

[[bench]]
name = "aroon_up"
harness = false

[[bench]]
name = "aroon_down"
harness = false

[[bench]]
name = "aroon_indicator"
harness = false

[[bench]]
name = "parabolic_tps"
harness = false

[[bench]]
name = "dir_mov_sys"
harness = false

[[bench]]
name = "vpt"
harness = false

[[bench]]
name = "tsi"
harness = false

[[bench]]
name = "ad"
harness = false

[[bench]]
name = "pvi"
harness = false

[[bench]]
name = "nvi"
harness = false

[[bench]]
name = "rvi"
harness = false

[[bench]]
name = "roi"
harness = false

[[bench]]
name = "tr"
harness = false

[[bench]]
name = "atr"
harness = false

[[bench]]
name = "ibs"
harness = false

[[bench]]
name = "pi"
harness = false

[[bench]]
name = "mean"
harness = false

[[bench]]
name = "median"
harness = false

[[bench]]
name = "mode"
harness = false

[[bench]]
name = "log"
harness = false

[[bench]]
name = "log_diff"
harness = false

[[bench]]
name = "var"
harness = false

[[bench]]
name = "stdev"
harness = false

[[bench]]
name = "mean_abs_dev"
harness = false

[[bench]]
name = "median_abs_dev"
harness = false

[[bench]]
name = "mode_abs_dev"
harness = false

[[bench]]
name = "peaks"
harness = false

[[bench]]
name = "valleys"
harness = false

[[bench]]
name = "peak_trend"
harness = false

[[bench]]
name = "valley_trend"
harness = false

[[bench]]
name = "overall_trend"
harness = false

[[bench]]
name = "break_down_trends"
harness = false

[[bench]]
name = "corr"
harness = false

[[bench]]
name = "ma"
harness = false

[[bench]]
name = "sma"
harness = false

[[bench]]
name = "ema"
harness = false

[[bench]]
name = "mg_dyn"
harness = false

[[bench]]
name = "ulcer"
harness = false

[[bench]]
name = "vs"
harness = false

